# biomonitor

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppLayout.tsx
src/core/database/: database.ts  schema.ts  seed.ts
src/core/i18n/: i18n.ts
src/core/router/: router.tsx
src/core/services/: imageResize.ts  llmParser.ts  pdfExtract.ts
src/core/theme/: theme.ts
src/features/analysis-types/: AnalysisTypeDetailScreen.tsx  AnalysisTypesScreen.tsx
src/features/health-log/: HealthLogHubScreen.tsx
src/features/health-log/medications/: MedicationEntryScreen.tsx  MedicationsListScreen.tsx
src/features/health-log/milestones/: MilestoneEntryScreen.tsx  MilestonesListScreen.tsx
src/features/health-log/symptoms/: SymptomEntryScreen.tsx  SymptomsListScreen.tsx
src/features/health-log/vaccines/: VaccineEntryScreen.tsx  VaccinesListScreen.tsx
src/features/home/: HomeScreen.tsx
src/features/import/: ImportScreen.tsx  OcrReviewScreen.tsx
src/features/labs/: LabsHubScreen.tsx
src/features/orders/: OrderDetailScreen.tsx  OrdersListScreen.tsx
src/features/records/: RecordDetailScreen.tsx  RecordEntryScreen.tsx  RecordsListScreen.tsx
src/features/settings/: SettingsScreen.tsx
src/features/trends/: TrendsScreen.tsx
src/features/visit-prep/: VisitPrepScreen.tsx  pdfGenerator.ts  specialtyMapping.ts
src/l10n/: en.json  es.json
