[package]
name = "biomonitor"
version = "0.1.0"
description = "Personal health tracking app"
authors = ["you"]
edition = "2021"

[lib]
name = "biomonitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

